--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,9 @@
     "api/**/*.php": {
       "runtime": "vercel-php@0.7.2"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/", "destination": "/api/index.php" },
+    { "source": "/:path*", "destination": "/api/:path*" }
+  ]
 }
