--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     }
   },
   "rewrites": [
+    { "source": "styles/style.css", "destination": "/api/styles/style.css" },
     { "source": "/", "destination": "/api/index.php" },
     { "source": "/:path*", "destination": "/api/:path*" }
   ]
